# citrus

./: .gitignore  235.js  Cargo.toml  README.md  Trunk.toml  citrus-20540602530021f0.css  citrus.scss  index-218a56c624512f13.js  index-218a56c624512f13_bg.wasm  index-4479cc68bea9d101.js  index-4479cc68bea9d101_bg.wasm  index-c1335c52017b2a7c.js  index-c1335c52017b2a7c_bg.wasm  index-fd71861e93ece4d0.js  index-fd71861e93ece4d0_bg.wasm  index.html  index.js  indexCss.css  package-lock.json  package.json  webpack.config.js
.github/workflows/: deploy.yml
src/: enum_map.rs  format.rs  lib.rs  tests.rs  util.rs
src/editor/: assets.rs  mod.rs  view.rs
src/editor/panel/: mod.rs
src/editor/shader/: basic.frag  basic.vert  color.rs  field.frag  field.vert  mod.rs
src/editor/view/: example.fldx  mod.rs  serde.rs
src/enum_map/: iter.rs  mod.rs
src/gl/: color.rs  command.rs  error.rs  mod.rs  shapes.rs  util.rs
src/gl/shader/: canvas.rs  canvas.vert  mod.rs
src/gl/shader/canvas/: canvas.vert  mod.rs
src/services/: image.rs
web/: citrus.scss  index.js
