[package]
name = "citrus"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2018"

description = "A 100% Orange Juice field editor."
readme = "README.md"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling 
# slower, so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the 
# default allocator, so it's not enabled by default.
wee_alloc = { version = "0.4", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "console"
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1"

# Citrus common tools for working with OJ fields.
[dependencies.citrus-common]
git = "https://github.com/frostu8/citrus-common.git"
branch = "main"
features = ["base64"]

# js_sys
[dependencies.js-sys]
version = "0.3"

# yew; a modular React-like wasm framework
[dependencies.yew]
version = "0.17"
